# Algorithms-theory-and-practice.-Data-structures.-Stepic

./: .gitmodules  CMakeLists.txt  main.c  readme.txt  start.sh
Test/: CMakeLists.txt  test.cpp
input/: CMakeLists.txt  input.c  input.h
stack/: CMakeLists.txt  stack.c  stack.h
